feat: goal 관련 완성 API 테스트 및 group start disscusion 테스트 완료
