# internal/domain/group_dto.go
@@ -40,7 +40,7 @@ type GroupResponse struct {
 
 type PatchGroupRequest struct {
 	RequestUserID   uint    `json:"-"               validate:"required,gte=1"`
-	GrouopID        uint    `params:"groupID"       validate:"required,gte=1"`
+	GroupID         uint    `json:"-" params:"groupID"       validate:"required,gte=1"`
 	BookTitle       *string `json:"bookTitle"       validate:"omitempty,min=1,max=255"`
 	BookAuthor      *string `json:"bookAuthor"      validate:"omitempty,min=1,max=255"`
 	BookPublisher   *string `json:"bookPublisher"   validate:"omitempty,max=255"`
